# MLharvest

./: .gitignore  README.md  copy_of_get_started_with_earth_engine_for_python.py  downloadThumbnails  environment.yaml  mlharvest.ipynb  pyproject.toml  removeClouds.py  test.txt
data/KML/: Hirapur.kml
notebooks/: pytorch-example.ipynb  test_model_and_dataset.ipynb
src/: copy_of_get_started_with_earth_engine_for_python.py  data.py  dataset.py  downloadImages.py  format_filenames.py  removeClouds.py  train_ndvi_unet.py
